make driver and wait singleton

--- a/enviroment.properties
+++ b/enviroment.properties
@@ -1,6 +1,6 @@
 url = http://www.n11.com/u
-wrongUsername = onur@swtestacademy.com
-wrongPassword = 11122233444
+username = administrator
+password = lucas
 timeout = 60
 browser = Chrome
 timeout_before_event = 100
