make lock of synchronized singleton a constant, clean class Driver, PropertyManager, ExtentManager and improve environment.properties

--- a/environment.properties
+++ b/environment.properties
@@ -1,7 +1,7 @@
-url = http://www.n11.com/u
+url = http://mantis.lucas.base2.com.br/
 username = administrator
 password = lucas
-timeout = 60
+timeout = 1500
 browser = Chrome
 timeout_before_event = 100
 #selenium_server = http:// selenium server pre grid
