--- a/environment.properties
+++ b/environment.properties
@@ -1,4 +1,5 @@
 url = http://mantis.lucas.base2.com.br/
+hubLink = http://172.17.0.2:4444/wd/hub
 username = administrator
 password = lucas
 timeout=5000
