ta sindo da jaula o monstro

--- a/environment.properties
+++ b/environment.properties
@@ -2,7 +2,9 @@ url = http://mantis.lucas.base2.com.br/
 hubLink = http://172.17.0.2:4444/wd/hub
 username = administrator
 password = lucas
-timeout=5000
+timeout = 5000
+maxRetryCount = 5
+
 browser = Chrome
 timeout_before_event = 100
 #selenium_server = http:// selenium server pre grid
