docker quase la em

--- a/environment.properties
+++ b/environment.properties
@@ -1,10 +1,8 @@
 url = http://mantis.lucas.base2.com.br/
-hubLink = http://172.17.0.2:4444/wd/hub
+hubLink = http://localhost:4444/wd/hub
 username = administrator
 password = lucas
-timeout=5000
-browser = Chrome
+timeout = 5000
 timeout_before_event = 100
-#selenium_server = http:// selenium server pre grid
-USERNAME_ID = "username"
+
 
