--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,25 @@
-version: '2'
+version: "3"
 services:
-  firefox:
+  selenium-hub
+  image: selenium/hub
+  container_name: selenium-hub
+  ports:
+  - "4444:4444"
+  chrome:
     image: selenium/node-chrome
     volumes:
     - /dev/shm:/dev/shm
     depends_on:
-    - hub
+    - selenium-hub
     environment:
-      HUB_HOST: hub
-
-#  chrome:
-#    image: selenium/node-chrome:3.14.0-arsenic
-#    volumes:
-#    - /dev/shm:/dev/shm
-#    depends_on:
-#    - hub
-#    environment:
-#      HUB_HOST: hub
-
-  hub:
-    image: selenium/hub
-    ports:
-    - "4446:4444"
+    - HUB_HOST=selenium-hub
+    - HUB_PORT=4444
+  firefox:
+    image: selenium/node-firefox
+    volumes:
+    - /dev/shm:/dev/shm
+    depends_on:
+    - selenium-hub
+    environment:
+    - HUB_HOST=selenium-hub
+    - HUB_PORT=4444
