--- a/environment.properties
+++ b/environment.properties
@@ -2,11 +2,11 @@ url = http://mantis.lucas.base2.com.br/
 hubLink = http://172.17.0.2:4444/wd/hub
 username = administrator
 password = lucas
-timeout = 5000
+timeout=2000
+timeout_before_event=100
 maxRetryCount = 1
 
 browser = Chrome
-timeout_before_event = 100
 #selenium_server = http:// selenium server pre grid
 USERNAME_ID = "username"
 
