came back to remote

--- a/environment.properties
+++ b/environment.properties
@@ -6,7 +6,8 @@ timeout=2000
 timeout_before_event=100
 maxRetryCount = 1
 
-browser = Chrome
+isTestExecutionLocal=false
+browserExecution = Chrome
 #selenium_server = http:// selenium server pre grid
 USERNAME_ID = "username"
 
