--- a/environment.properties
+++ b/environment.properties
@@ -1,5 +1,5 @@
 url = http://mantis.lucas.base2.com.br/
-hubLink = http://172.17.0.2:4444/wd/hub
+hubLink = http://10.0.75.1:4444/wd/hub
 username = administrator
 password = lucas
 timeout=2000
@@ -7,7 +7,7 @@ timeout_before_event=100
 maxRetryCount = 1
 
 isTestExecutionLocal=false
-browserExecution = Chrome
+browserExecution = opera
 #selenium_server = http:// selenium server pre grid
 USERNAME_ID = "username"
 
