driver update and opera

--- a/environment.properties
+++ b/environment.properties
@@ -1,13 +1,13 @@
 url = http://mantis.lucas.base2.com.br/
-hubLink = http://10.0.75.1:4444/wd/hub
+hubLink = http://192.168.0.101:4444/wd/hub
 username = administrator
 password = lucas
-timeout=2000
-timeout_before_event=100
+timeout = 2000
+timeout_before_event = 100
 maxRetryCount = 1
 
-isTestExecutionLocal=false
-browserExecution = opera
+isTestExecutionLocal = true
+browserExecution = chrome
 #selenium_server = http:// selenium server pre grid
 USERNAME_ID = "username"
 
