so falta mais um navegador

--- a/environment.properties
+++ b/environment.properties
@@ -6,7 +6,7 @@ timeout = 2000
 timeout_before_event = 100
 maxRetryCount = 1
 
-isTestExecutionLocal = true
+isTestExecutionLocal = false
 browserExecution = chrome
 
 
