--- a/SeleniumGrid/drivers/NodeDefaultConfig.json
+++ b/SeleniumGrid/drivers/NodeDefaultConfig.json
@@ -17,6 +17,11 @@
       "browserName": "chrome",
       "maxInstances": 5,
       "seleniumProtocol": "WebDriver"
+    },
+    {
+      "browserName": "MicrosoftEdge",
+      "maxInstances": 5,
+      "seleniumProtocol": "WebDriver"
     }
   ],
   "proxy": "org.openqa.grid.selenium.proxy.DefaultRemoteProxy",
