--- a/environment.properties
+++ b/environment.properties
@@ -6,7 +6,7 @@ timeout = 4000
 timeout_before_event = 500
 maxRetryCount = 1
 
-isTestExecutionLocal = false
+isTestExecutionLocal = true
 browserExecution = chrome
 
 
