--- a/environment.properties
+++ b/environment.properties
@@ -1,12 +1,21 @@
-url = http://mantis.lucas.base2.com.br/
-hubLink = http://192.168.0.101:4444/wd/hub
+url = http://127.0.0.1:8989/
+#url = http://mantis.lucas.base2.com.br/
+
+ # hub do docker
+hubLink = http://127.0.0.1:4446/wd/hub
+ #hub do selenium grid
+#hubLink = http://192.168.0.103:4444/wd/hub
+
 username = administrator
 password = lucas
 timeout = 4000
 timeout_before_event = 500
 maxRetryCount = 1
 
+DatabaseServer = 127.0.0.1:3306/
+DatabaseName = bugtracker
+DBUser = mantisbt
+DBPassword = mantisbt
+
 isTestExecutionLocal = true
-browserExecution = chrome
-
-
+browserExecution = edge
