--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,26 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- ojdbc7.jar example -->
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc7</artifactId>
+            <version>12.1.0</version>
+        </dependency>
+
+        <!-- ojdbc7.jar example -->
+        <!--<dependency>-->
+            <!--<groupId>com.mariadb</groupId>-->
+            <!--<artifactId>mariadb</artifactId>-->
+            <!--<version>2.3.0</version>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql</artifactId>
+            <version>5.1.47</version>
+        </dependency>
+
     </dependencies>
 
     <build>
