--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,45 @@
-version: '3.0'
-services:
-  selenium-hub
+db:
+  environment:
+  - MYSQL_ROOT_PASSWORD=root
+  - MYSQL_DATABASE=bugtracker
+  - MYSQL_USER=mantisbt
+  - MYSQL_PASSWORD=mantisbt
+  image: mariadb
+  ports:
+  - "3306:3306"
+  restart: always
+mantisbt:
+  image: "vimagick/mantisbt:latest"
+  links:
+  - db
+  ports:
+  - "8989:80"
+  restart: always
+jenkins:
+  image: jenkins
+  ports:
+  - "8080:8080"
+  restart: always
+selenium-hub:
   image: selenium/hub
   container_name: selenium-hub
   ports:
-  - "4444:4444"
-  chrome:
-    image: selenium/node-chrome
-    volumes:
-    - /dev/shm:/dev/shm
-    depends_on:
-    - selenium-hub
-    environment:
-    - HUB_HOST=selenium-hub
-    - HUB_PORT=4444
-  firefox:
-    image: selenium/node-firefox
-    volumes:
-    - /dev/shm:/dev/shm
-    depends_on:
-    - selenium-hub
-    environment:
-    - HUB_HOST=selenium-hub
-    - HUB_PORT=4444
+  - "4446:4444"
+chrome:
+  image: selenium/node-chrome
+  volumes:
+  - /dev/shm:/dev/shm
+  links:
+  - selenium-hub
+  environment:
+  - HUB_HOST=selenium-hub
+  - HUB_PORT=4444
+firefox:
+  image: selenium/node-firefox
+  volumes:
+  - /dev/shm:/dev/shm
+  links:
+  - selenium-hub
+  environment:
+  - HUB_HOST=selenium-hub
+  - HUB_PORT=4444
