--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>ru.yandex.qatools.ashot</groupId>
             <artifactId>ashot</artifactId>
-            <version>RELEASE</version>
+            <version>1.5.4</version>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
