fix mysql dependency

--- a/environment.properties
+++ b/environment.properties
@@ -17,5 +17,5 @@ DatabaseName = bugtracker
 DBUser = root
 DBPassword = root
 
-isTestExecutionLocal = false
+isTestExecutionLocal = true
 browserExecution = chrome
