--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
         
         <dependency>
             <groupId>com.mysql</groupId>
-            <artifactId>mysql</artifactId>
+            <artifactId>mysql-connector</artifactId>
             <version>5.1.47</version>
         </dependency>
 
