--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
                 <configuration>
                     <suiteXmlFiles>
                         <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+                        <skipTests>true</skipTests>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
