add <forkMode>never</forkMode> in surefire-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
                 <version>2.22.1</version>
                 <configuration>
                     <useSystemClassLoader>false</useSystemClassLoader>
+                    <forkMode>never</forkMode>
                     <suiteXmlFiles>
                         <suiteXmlFile>TestNG.xml</suiteXmlFile>
                     </suiteXmlFiles>
