--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
                 <configuration>
-                    <useSystemClassLoader>false</useSystemClassLoader>
+                    <!--<useSystemClassLoader>false</useSystemClassLoader>-->
                     <forkMode>never</forkMode>
                     <suiteXmlFiles>
                         <suiteXmlFile>TestNG.xml</suiteXmlFile>
