--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.1</version>
+                <version>3.0.0-M3</version>
                 <configuration>
                     <!--<useSystemClassLoader>false</useSystemClassLoader>-->
                     <forkMode>never</forkMode>
