--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,12 @@
             <version>4.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.47</version>
+        </dependency>
+
         <!--to take a screenshot-->
         <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
         <!-- https://mvnrepository.com/artifact/ru.yandex.qatools.ashot/ashot -->
